/calendar_day/create.sql
/calendar_month/create.sql
/calendar_date/create.sql
/state/create.sql
/county/create.sql
/city/create.sql
/zipcode/create.sql
/state_population/create.sql
/race_ethnicity/create.sql
/county_population/create.sql
/county_population_by_race_ethnicity/create.sql
/city_population/create.sql
/city_population_by_race_ethnicity/create.sql
/state_cases/create.sql
/state_cases_by_race_ethnicity/create.sql
/state_tests/create.sql
/state_tests_by_race_ethnicity/create.sql
/state_deaths/create.sql
/state_deaths_by_race_ethnicity/create.sql
/state_vaccinations/create.sql
/state_vaccinations_by_race_ethnicity/create.sql
/county_cases/create.sql
/fatal_police_shootings/create.sql
/evictions/create.sql
/google_mobility_reports/create.sql
/holiday_type/create.sql
/holiday_type/populate.sql
/holiday/create.sql
/calendar_day/populate.sql
/holiday/drop_fk_calendar_date.sql
/holiday/drop_column_calendar_date.sql
/holiday/populate.sql
/holiday_calendar_date/create.sql
/county/increase_name_column.sql
/city/increase_name_column.sql
/state_population_2020/create.sql
/county_population_2020/create.sql
/city_population_2020/create.sql
/state_population_2020_by_race_ethnicity/create.sql
/county_population_2020_by_race_ethnicity/create.sql
/city_population_2020_by_race_ethnicity/create.sql