@@ -1,0 +1,8 @@
+-- Populate race_ethnicity table
+INSERT INTO race_ethnicity (name) VALUES
+	('White'),
+	('Black or African American'),
+	('American Indian and Alaska Native'),
+	('Asian'),
+	('Native Hawaiian and Other Pacific Islander')
+;
