@@ -39,3 +39,4 @@
 /state_population_2020_by_race_ethnicity/create.sql
 /county_population_2020_by_race_ethnicity/create.sql
 /city_population_2020_by_race_ethnicity/create.sql
+/race_ethnicity/populate.sql
